--- a/helm/kustomization.yaml
+++ b/helm/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - namespace.yaml
-- release.yaml
 - repository.yaml
 - "./velero/namespace.yaml"
+- "./velero/release.yaml"
+- "./velero/repository.yaml"
